--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,4 @@
 ---
-title: "Health Workforce Education & Training: Scrollytelling Summary"
 format:
   html:
     theme: cosmo
@@ -9,25 +8,59 @@ format:
 execute:
   echo: false
 ---
+<img src="images/logo.png" class="floating-logo">
+
 
 ```{=html}
-<section class="full-screen">
-  <div class="overlay-text">
-    <h1>Health Workforce Education & Training</h1>
-    <p>Supporting People with Intellectual Disability</p>
+<section class="cover-hero snap cover-snap">
+  <div class="cover-panel">
+    <h1>
+      Position Statement on Health Workforce Education and Training to Support
+      People with Intellectual Disability
+    </h1>
+    <p class="cover-date">February 2026</p>
+
+    <!-- logo later -->
+    <!-- <img src="images/logo.png" class="cover-logo"> -->
+  </div>
+</section>
+```
+
+<div class="story-rail" aria-label="Story progress">
+  <svg class="story-path" viewBox="0 0 120 600" preserveAspectRatio="none">
+    <!-- curve path -->
+    <path d="M80,20 C20,120 110,220 60,320 C10,420 110,520 70,580"
+          class="path-line"/>
+  </svg>
+
+  <div class="rail-dot" data-target="pos" style="top: 15%;">Position</div>
+  <div class="rail-dot" data-target="prob" style="top: 30%;">Problem</div>
+  <div class="rail-dot" data-target="sol" style="top: 45%;">Solution</div>
+  <div class="rail-dot" data-target="rec" style="top: 60%;">Key recs</div>
+  <div class="rail-dot" data-target="how" style="top: 75%;">How</div>
+  <div class="rail-dot" data-target="glos" style="top: 90%;">Glossary</div>
+</div>
+
+
+```{=html}
+<section id="pos" class="scroll-block snap position-section">
+  <div class="hover-card">
+    <h2>Our Position</h2>
+    <p>
+      Every health professional must learn how to provide quality health care to people with intellectual disability because everyone has the right to
+      <span class="kw" tabindex="0">safe</span>,
+      <span class="kw" tabindex="0">respectful</span>,
+      <span class="kw" tabindex="0">effective</span> and
+      <span class="kw" tabindex="0">inclusive</span>
+      health care.
+    </p>
   </div>
 </section>
 ```
 
 
-<section class="scroll-block">
-  <h2>Our Position</h2>
-  <p>
-    Every health professional must learn how to provide quality health care to people with intellectual disability because everyone has the right to safe, respectful, effective and inclusive health care.
-  </p>
-</section>
 
-<section class="scroll-block">
+<section id= "prob" class="scroll-block snap">
   <h2>The Problem</h2>
   <p>
     People with intellectual disability experience some of the poorest health outcomes in Australia. Many of these outcomes are preventable with better access to inclusive, high-quality care.
@@ -42,7 +75,7 @@ execute:
   </p>
 </section>
 
-<section class="scroll-block">
+<section id= "sol" class="scroll-block snap">
   <h2>The Solution</h2>
   <p>
     Better education and training is one of the top requests made by people with intellectual disability. The Position Statement calls for a coordinated national approach to upskill today’s and tomorrow’s health workforce.
@@ -58,7 +91,7 @@ execute:
   </p>
 </section>
 
-<section class="scroll-block">
+<section id= "rec" class="scroll-block snap">
   <h2>Key Recommendations</h2>
   <ul>
     <li>Make intellectual disability education compulsory in all tertiary health courses.</li>
@@ -72,14 +105,14 @@ execute:
   </ul>
 </section>
 
-<section class="scroll-block">
+<section id= "how" class="scroll-block snap">
   <h2>How This Statement Was Created</h2>
   <p>
     The Position Statement draws on best evidence and insights from people with intellectual disability, families, carers, health professionals, educators, researchers and advocates.
   </p>
 </section>
 
-<section class="scroll-block">
+<section id= "glos" class="scroll-block snap">
   <h2>Glossary of Key Terms</h2>
   <p>This section summarises important terms from the document:</p>
   <ul>
@@ -91,8 +124,55 @@ execute:
   </ul>
 </section>
 
+<script>
+(function () {
+  const sections = document.querySelectorAll(".snap:not(.cover-hero)");
+  if (!sections.length) return;
+
+  const obs = new IntersectionObserver((entries) => {
+    entries.forEach((e) => {
+      // intersectionRatio is 0..1
+      const r = e.intersectionRatio;
+
+      e.target.style.opacity = r;
+      e.target.style.transform = `translateY(${20 - 20 * r}px)`;
+    });
+  }, {
+    threshold: Array.from({length: 101}, (_, i) => i / 100)
+  });
+
+  sections.forEach(s => obs.observe(s));
+})();
+</script>
+
+<script>
+(function(){
+  const dots = document.querySelectorAll(".rail-dot");
+  const sections = ["pos","prob","sol","rec","how","glos"]
+    .map(id => document.getElementById(id))
+    .filter(Boolean);
+
+  if(!sections.length || !dots.length) return;
+
+  const dotMap = new Map();
+  dots.forEach(d => dotMap.set(d.dataset.target, d));
+
+  const obs = new IntersectionObserver((entries) => {
+    entries.forEach(e => {
+      if(e.isIntersecting){
+        dots.forEach(d => d.classList.remove("active"));
+        const id = e.target.id;
+        const dot = dotMap.get(id);
+        if(dot) dot.classList.add("active");
+      }
+    });
+  }, { threshold: 0.55 });
+
+  sections.forEach(s => obs.observe(s));
+})();
+</script>
 ```{=html}
-<section class="full-screen">
+<section class="full-screen snap">
   <div class="overlay-text">
     <h2>Toward a More Inclusive Health System</h2>
     <p>Education and training turn good intentions into safer care.</p>
